--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
             <img class="logo" src="./assets/img/logo.png" alt="Amontadas Boat">
         <div class="menu-bar">
-            <a class="link-menu-bar" href="">Serviços</a>
+            <a class="link-menu-bar" href="./assets/html/Produtos.html">Serviços</a>
             <a class="link-menu-bar" href="">Nossa Equipe</a>
             <a class="link-menu-bar" href="">Contato</a>
         </div>
