Alteração no CSS e HTML e inclusão de imagem

--- a/assets/html/contato.html
+++ b/assets/html/contato.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amontadas Boat</title>
-    <link rel="stylesheet" href="./assets/style/style.css">
-    <link rel="stylesheet" href="./assets/style/index.css">
+    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../style/contato.css">
 </head>
 <body>
     <header>
-            <img class="logo" src="./assets/img/logo.png" alt="Amontadas Boat">
+            <img class="logo" src="../img/logo.png" alt="Amontadas Boat">
         <div class="menu-bar">
             <a class="link-menu-bar" href="">Serviços</a>
             <a class="link-menu-bar" href="">Nossa Equipe</a>
@@ -49,8 +49,8 @@
     </main>
     <footer>
            <div class="img-footer">
-                <img id="icon-insta" src="./assets/img/Instagram.svg" alt="Instagram">
-                <img id="icon-whats" src="./assets/img/whatsapp.svg" alt="Whatsapp">
+                <img id="icon-insta" src="../img/Instagram.svg" alt="Instagram">
+                <img id="icon-whats" src="../img/whatsapp.svg" alt="Whatsapp">
            </div>
 
             <p id="byFor">Desenvolvido por 2023 TechDev’s</p>
