Alteração no layout da seção e inclusão do conteúdo

--- a/assets/html/Produtos.html
+++ b/assets/html/Produtos.html
@@ -24,9 +24,9 @@
                     <img class='imgBoat' src="../img/lanchaProduto.jpg" alt="Lancha Branca">
                 </div>
                 <div class="planoBoat">
-                    <div class="btn"></div>
-                    <div class="text"></div>
-                    <div class="btn"></div>
+                    <h4>Lancha:</h4>
+                    <p>Capacidade: 9 pessoas</p>
+                    <p>Aluguel: R$ 1.900,00</p>
                 </div>
             </div>
             <div class="boat">
@@ -34,9 +34,9 @@
                     <img class='imgBoat'  src="../img/veleiroProduto.png" alt="Veleiro no pôr do sol">
                 </div>
                 <div class="planoBoat">
-                    <div class="btn"></div>
-                    <div class="text"></div>
-                    <div class="btn"></div>
+                    <h4>Veleiro:</h4>
+                    <p>Capacidade: 6 pessoas</p>
+                    <p>Aluguel: R$ 1.300,00</p>
                 </div>
             </div>
             <div class="boat">
@@ -44,9 +44,9 @@
                     <img class='imgBoat'  src="../img/jetSkiProduto.png" alt="Jet Ski preto com amarelho na àgua">
                 </div>
                 <div class="planoBoat">
-                    <div class="btn"></div>
-                    <div class="text"></div>
-                    <div class="btn"></div>
+                    <h4>jet-Ski:</h4>
+                    <p>Capacidade: 2 pessoas</p>
+                    <p>Aluguel: R$ 500,00</p>
                 </div>
             </div>
         </section>
@@ -54,15 +54,20 @@
         <section id="secMergulho">
             <div class="mergulho">
                 <div class="divImgMergulho">
-                    <img class='imgBoat' src="../img/mergulho1Produto.png" alt="Mergulhador com tartaruga">
+                    <img class='imgMergulho' src="../img/mergulho1Produto.png" alt="Mergulhador com tartaruga">
                 </div>
                 <div class="planoMergulho">
-                    <div class="btn"></div>
-                    <div class="text"></div>
-                    <div class="btn"></div>
+                    <h4>Passeios:</h4>
+                    <ul>
+                        <li>Encontro do Rio com o Mar em Moitas</li>
+                        <li>Túnel do Mangue do Rio Aracatiaçu</li>
+                        <li>Barraca ilha das Ostras</li>
+                        <li>Parada Para Banho Porto de Areia</li>
+                        <li>Pôr do sol em Icaraizinho de Amontada</li>
+                    </ul>
                 </div>
                 <div class="divImgMergulho">
-                    <img class='imgBoat' src="../img/mergulho2Produto.png" alt="Dois Mergulhadores">
+                    <img class='imgMergulho' src="../img/mergulho2Produto.png" alt="Dois Mergulhadores">
                 </div>
             </div>
         </section>
