Finalização layout formulário e definição icone enviar

--- a/assets/html/contato.html
+++ b/assets/html/contato.html
@@ -20,8 +20,8 @@
 
     </header>
     <main>
-        <form>
-            <fieldset>
+        <div class="div-form">
+            <form>
                     <div class="div-input">
                         <label for="name" class="label-input">Nome Completo:</label>
                         <input type="text" name="nome" id="name-forms" placeholder="Nome Completo" class="input-user" required>
@@ -42,10 +42,9 @@
                         <textarea name="" id=""></textarea>
                     </div>	
 
-                <button type="submit" class="submit">Enviar</button>
-            </fieldset>
-
-        </form>
+                <button type="submit" class="submit" ><img class="img-btn-submit" src="../img/barquinho.png" alt=""></button>
+            </form>
+        </div>
     </main>
     <footer>
            <div class="img-footer">
