Alteração final do botão no CSS página contato

--- a/assets/html/contato.html
+++ b/assets/html/contato.html
@@ -42,7 +42,7 @@
                         <textarea name="" id=""></textarea>
                     </div>	
 
-                <button type="submit" class="submit" ><img class="img-btn-submit" src="../img/barquinho.png" alt=""></button>
+                    <button type="submit" value=""><img class="img-btn-submit" src="../img/barquinho.png" alt=""></button>
             </form>
         </div>
     </main>
