Alteração fonte da página

--- a/index.html
+++ b/index.html
@@ -9,56 +9,53 @@
     <link rel="stylesheet" href="./assets/style/index.css">
 </head>
 <body>
-    <header>
-            <img class="logo" src="./assets/img/logo.png" alt="Amontadas Boat">
-        <div class="menu-bar">
-            <a class="link-menu-bar" href="">Serviços</a>
-            <a class="link-menu-bar" href="">Nossa Equipe</a>
-            <a class="link-menu-bar" href="">Contato</a>
-        </div>
-        </div>
-
-    </header>
-    <main>
-        <section class="container-home">
-            <div class="content-home">
-                <img class="img-home" src="./assets/img/lanchaHome.jpg" alt="Lancha">
-                <img class="img-home" src="./assets/img/veleiroHome.jpg" alt="Veleiro">
-                <img class="img-home" src="./assets/img/jetSkiHome.jpg" alt="Jet Ski">
+        <header>
+                <img class="logo" src="./assets/img/logo.png" alt="Amontadas Boat">
+            <div class="menu-bar">
+                <a class="link-menu-bar" href="">SERVIÇOS</a>
+                <a class="link-menu-bar" href="">NOSSA EQUIPE</a>
+                <a class="link-menu-bar" href="">CONTATO</a>
             </div>
-        </section>
-        <section class="container-history-home">
-            <div class="content-history-home">
-                <div class="title-history">
-                    <h2>
-                        Nossa História
-                    </h2>
-                </div>
-
-                <div class="history">
-                    <p>
-                        Já imaginou explorar o mar de Amontada e de praias vizinhas? Nós da Amontada’s boat somos uma empresa criada em 2017 especializada em aluguéis de barcos, veleiros, lanchas e jet-ski e dentre isso também oferecemos pacotes com passeios turísticos e outras atividades mais leves como o mergulho. Seja qual for a sua preferência, garantimos a sua diversão!
-                    </p>
-                    <p>
-                        Dentre nossos serviços, oferecemos a possibilidade de alugar com ou sem capitão. Se não tem habilitação para navegar, não se preocupe, pois aqui você pode encontrar barcos com capitão, e assim, você pode deixar um profissional assumir o comando enquanto curte este momento único! Temos uma equipe de especialistas pronta para planejar e realizar com carinho sua experiência a bordo.                    </p>
-                    <p>
-                        O aluguel dos nossos equipamentos pode ser por horas, o dia inteiro ou até mesmo vários dias, tudo depende da disponibilidade, e da sua agenda! Foco na satisfação de nossos clientes, tratamos com capricho cada detalhe da sua jornada conosco, seja no aluguel de veleiros ou passeios, entre em contato conosco pelo nosso email ou até mesmo Whatsapp e saiba mais.                    </p>
-                </div>
             </div>
-        </section>
-    </main>
-    <footer>
-           <div class="img-footer">
-                <img id="icon-insta" src="./assets/img/Instagram.svg" alt="Instagram">
-                <img id="icon-whats" src="./assets/img/whatsapp.svg" alt="Whatsapp">
-           </div>
 
-            <p id="byFor">Desenvolvido por 2023 TechDev’s</p>
-            <p>+55(11)2345-6789</p>
-    </footer>
+        </header>
+        <main>
+            <section class="container-home">
+                <div class="content-home">
+                    <img class="img-home" src="./assets/img/lanchaHome.jpg" alt="Lancha">
+                    <img class="img-home" src="./assets/img/veleiroHome.jpg" alt="Veleiro">
+                    <img class="img-home" src="./assets/img/jetSkiHome.jpg" alt="Jet Ski">
+                </div>
+            </section>
+            <section class="container-history-home">
+                <div class="content-history-home">
+                    <div class="title-history">
+                        <h2>
+                            Nossa História
+                        </h2>
+                    </div>
 
-    
+                    <div class="history">
+                        <p>
+                            Já imaginou explorar o mar de Amontada e de praias vizinhas? Nós da Amontada’s boat somos uma empresa criada em 2017 especializada em aluguéis de barcos, veleiros, lanchas e jet-ski e dentre isso também oferecemos pacotes com passeios turísticos e outras atividades mais leves como o mergulho. Seja qual for a sua preferência, garantimos a sua diversão!
+                        </p>
+                        <p>
+                            Dentre nossos serviços, oferecemos a possibilidade de alugar com ou sem capitão. Se não tem habilitação para navegar, não se preocupe, pois aqui você pode encontrar barcos com capitão, e assim, você pode deixar um profissional assumir o comando enquanto curte este momento único! Temos uma equipe de especialistas pronta para planejar e realizar com carinho sua experiência a bordo.                    </p>
+                        <p>
+                            O aluguel dos nossos equipamentos pode ser por horas, o dia inteiro ou até mesmo vários dias, tudo depende da disponibilidade, e da sua agenda! Foco na satisfação de nossos clientes, tratamos com capricho cada detalhe da sua jornada conosco, seja no aluguel de veleiros ou passeios, entre em contato conosco pelo nosso email ou até mesmo Whatsapp e saiba mais.                    </p>
+                    </div>
+                </div>
+            </section>
+        </main>
+        <footer>
+            <div class="img-footer">
+                    <img id="icon-insta" src="./assets/img/Instagram.svg" alt="Instagram">
+                    <img id="icon-whats" src="./assets/img/whatsapp.svg" alt="Whatsapp">
+            </div>
 
+                <p id="byFor">Desenvolvido por 2023 TechDev’s</p>
+                <p>+55(11)2345-6789</p>
+        </footer>
 </body>
 </html>
 
