Definição Menu e rodapé responsivo

--- a/assets/html/Produtos.html
+++ b/assets/html/Produtos.html
@@ -5,21 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amontadas Boat</title>
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../style/headerFooter.css">
     <link rel="stylesheet" href="../style/Produto.css">
 </head>
 <body>
     <header>
             <img class="logo" src="../img/logo.png" alt="Amontadas Boat">
         <div class="menu-bar">
-            <a class="link-menu-bar" href="../../index.html">Quem Somos</a>
-            <a class="link-menu-bar" href="">Nossa Equipe</a>
-            <a class="link-menu-bar" href="">Contato</a>
+            <ul>
+                <li><a class="link-menu-bar" href="../../index.html">Quem Somos</a></li>
+                <li id='localPage'><a  class="link-menu-bar" href="">Produtos</a><img id='iconLocalPage' src="../img/iconLocalPage.png" alt=""></li>
+                <li><a class="link-menu-bar" href="">Equipe</a></li>
+                <li><a class="link-menu-bar" href="">Contato</a></li>
+            </ul>
+            <img id='iconMenuMobile' src="../img/menuMobileIcon.svg" alt="">
         </div>
     </header>
     <main>
         <section id="secBoats">
-            <div class="boat">
+            <div class="buttonNavigation"><img src="../img/left.svg" alt=""></div>
+            <div id='Lancha' class="boat">
+                
                 <div class="divImgBoat">
                     <img class='imgBoat' src="../img/lanchaProduto.jpg" alt="Lancha Branca">
                 </div>
@@ -29,7 +35,7 @@
                     <p>Aluguel: R$ 1.900,00</p>
                 </div>
             </div>
-            <div class="boat">
+            <div id='veleiro' class="boat">
                 <div class="divImgBoat">
                     <img class='imgBoat'  src="../img/veleiroProduto.png" alt="Veleiro no pôr do sol">
                 </div>
@@ -39,21 +45,22 @@
                     <p>Aluguel: R$ 1.300,00</p>
                 </div>
             </div>
-            <div class="boat">
+            <div id='jetSki' class="boat">
                 <div class="divImgBoat">
                     <img class='imgBoat'  src="../img/jetSkiProduto.png" alt="Jet Ski preto com amarelho na àgua">
                 </div>
-                <div class="planoBoat">
+                <div  class="planoBoat">
                     <h4>jet-Ski:</h4>
                     <p>Capacidade: 2 pessoas</p>
                     <p>Aluguel: R$ 500,00</p>
                 </div>
             </div>
+            <div class="buttonNavigation" ><img src="../img/rigth.svg" alt=""></div>
         </section>
 
         <section id="secMergulho">
             <div class="mergulho">
-                <div class="divImgMergulho">
+                <div id="imgMergulho1" class="divImgMergulho">
                     <img class='imgMergulho' src="../img/mergulho1Produto.png" alt="Mergulhador com tartaruga">
                 </div>
                 <div class="planoMergulho">
@@ -66,7 +73,7 @@
                         <li>Pôr do sol em Icaraizinho de Amontada</li>
                     </ul>
                 </div>
-                <div class="divImgMergulho">
+                <div id='imgMergulho2' class="divImgMergulho">
                     <img class='imgMergulho' src="../img/mergulho2Produto.png" alt="Dois Mergulhadores">
                 </div>
             </div>
@@ -74,12 +81,12 @@
     </main>
     <footer>
            <div class="img-footer">
-                <img id="icon-insta" src="../img/Instagram.svg" alt="Instagram">
-                <img id="icon-whats" src="../img/whatsapp.svg" alt="Whatsapp">
+                <a><img id="icon-insta" src="../img/Instagram.svg" alt="Instagram"></a>
+                <a><img id="icon-whats" src="../img/whatsapp.svg" alt="Whatsapp"></a>
            </div>
 
             <p id="byFor">Desenvolvido por 2023 TechDev’s</p>
-            <p>+55(11)2345-6789</p>
+            <p id="numberContact">+55(11)2345-6789</p>
     </footer>
 </body>
 </html>
