--- a/index.html
+++ b/index.html
@@ -5,26 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amontadas Boat</title>
-    <link rel="stylesheet" href="./assets/style/style.css">
-    <link rel="stylesheet" href="./assets/style/index.css">
+    <link rel="stylesheet" href="assets/style/headerFooter.css">
+    <link rel="stylesheet" href="assets/style/index.css">
 </head>
 <body>
     <header>
-            <img class="logo" src="./assets/img/logo.png" alt="Amontadas Boat">
+            <img class="logo" src="assets/img/logo.png" alt="Amontadas Boat">
         <div class="menu-bar">
-            <a class="link-menu-bar" href="./assets/html/Produtos.html">Serviços</a>
-            <a class="link-menu-bar" href="">Nossa Equipe</a>
-            <a class="link-menu-bar" href="">Contato</a>
+            <ul>
+                <li id='localPage'><a  class="link-menu-bar" href="">Quem Somos</a><img id='iconLocalPage' src="assets/img/iconLocalPage.png" alt=""></li>
+                <li><a class="link-menu-bar" href="">Produtos</a></li>
+                <li><a class="link-menu-bar" href="">Equipe</a></li>
+                <li><a class="link-menu-bar" href="">Contato</a></li>
+            </ul>
+            <img id='iconMenuMobile' src="assets/img/menuMobileIcon.svg" alt="">
         </div>
-        </div>
-
     </header>
     <main>
         <section class="container-home">
             <div class="content-home">
-                <img class="img-home" src="./assets/img/lanchaHome.jpg" alt="Lancha">
-                <img class="img-home" src="./assets/img/veleiroHome.jpg" alt="Veleiro">
-                <img class="img-home" src="./assets/img/jetSkiHome.jpg" alt="Jet Ski">
+                <img class="img-home" src="assets/img/lanchaHome.jpg" alt="Lancha">
+                <img class="img-home" src="assets/img/veleiroHome.jpg" alt="Veleiro">
+                <img class="img-home" src="assets/img/jetSkiHome.jpg" alt="Jet Ski">
             </div>
         </section>
         <section class="container-history-home">
@@ -49,12 +51,12 @@
     </main>
     <footer>
            <div class="img-footer">
-                <img id="icon-insta" src="./assets/img/Instagram.svg" alt="Instagram">
-                <img id="icon-whats" src="./assets/img/whatsapp.svg" alt="Whatsapp">
+                <img id="icon-insta" src="assets/img/Instagram.svg" alt="Instagram">
+                <img id="icon-whats" src="assets/img/whatsapp.svg" alt="Whatsapp">
            </div>
 
             <p id="byFor">Desenvolvido por 2023 TechDev’s</p>
-            <p>+55(11)2345-6789</p>
+            <p id="numberContact">+55(11)2345-6789</p>
     </footer>
 
     
