Adição de comentários

--- a/assets/html/contato.html
+++ b/assets/html/contato.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../style/contato.css">
 </head>
 <body>
+    <!-- Menu da página  -->
     <header>
             <img class="logo" src="../img/logo.png" alt="Amontadas Boat">
         <div class="menu-bar">
@@ -20,6 +21,7 @@
 
     </header>
     <main>
+        <!-- Div para as labels do formulário -->
         <div class="div-form">
             <form>
                     <div class="div-input">
