Sincronização responsividade index, header e footer

--- a/assets/html/Produtos.html
+++ b/assets/html/Produtos.html
@@ -14,7 +14,7 @@
         <div class="menu-bar">
             <ul>
                 <li><a class="link-menu-bar" href="../../index.html">Quem Somos</a></li>
-                <li id='localPage'><a  class="link-menu-bar" href="">Produtos</a><img id='iconLocalPage' src="../img/iconLocalPage.png" alt=""></li>
+                <li><a  class="link-menu-bar" href="">Produtos</a><img id='iconLocalPage' src="../img/iconLocalPage.png" alt=""></li>
                 <li><a class="link-menu-bar" href="">Equipe</a></li>
                 <li><a class="link-menu-bar" href="">Contato</a></li>
             </ul>
