inserção e definição das funcionabilidade dos botões de navegação

--- a/assets/html/Produtos.html
+++ b/assets/html/Produtos.html
@@ -23,7 +23,7 @@
     </header>
     <main>
         <section id="secBoats">
-            <div class="buttonNavigation"><img src="../img/left.svg" alt=""></div>
+            <div id='left' class="buttonNavigation"><img src="../img/left.svg" alt=""></div>
             <div id='Lancha' class="boat">
                 
                 <div class="divImgBoat">
@@ -55,7 +55,7 @@
                     <p>Aluguel: R$ 500,00</p>
                 </div>
             </div>
-            <div class="buttonNavigation" ><img src="../img/rigth.svg" alt=""></div>
+            <div id="rigth" class="buttonNavigation" onclick="botaoDireito()"><img src="../img/rigth.svg" alt=""></div>
         </section>
 
         <section id="secMergulho">
