correções nos botões de navegação mobile

--- a/assets/html/Produtos.html
+++ b/assets/html/Produtos.html
@@ -23,8 +23,8 @@
     </header>
     <main id="main">
         <section id="secBoats">
-            <div class="buttonNavigation"><img src="../img/left.svg" alt=""></div>
-            <div id='Lancha' class="boat">
+            <div id="left" class="buttonNavigation" onclick="botaoEsquerdo()"><img  src="../img/left.svg" alt=""></div>
+            <div id='lancha' class="boat">
                 
                 <div class="divImgBoat">
                     <img class='imgBoat' src="../img/lanchaProduto.jpg" alt="Lancha Branca">
@@ -55,7 +55,7 @@
                     <p>Aluguel: R$ 500,00</p>
                 </div>
             </div>
-            <div class="buttonNavigation" ><img src="../img/rigth.svg" alt=""></div>
+            <div id="rigth" class="buttonNavigation"><img src="../img/rigth.svg" alt=""></div>
         </section>
 
         <section id="secMergulho">
@@ -88,6 +88,7 @@
             <p id="byFor">Desenvolvido por 2023 TechDev’s</p>
             <p id="numberContact">+55(11)2345-6789</p>
     </footer>
-    <script src="/assets/js/header.js" ></script>
+    <script src="../js/header.js" ></script>
+    <script src="../js/produto.js"></script>
 </body>
 </html>
