Preparando para unificação geral

--- a/assets/html/Produtos.html
+++ b/assets/html/Produtos.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amontadas Boat</title>
     <link rel="stylesheet" href="../style/headerFooter.css">
-    <link rel="stylesheet" href="../style/Produto.css">
+    <link rel="stylesheet" href="../style/produto.css">
 </head>
 <body>
     <header id="header">
             <img class="logo" src="../img/logo.png" alt="Amontadas Boat">
         <div class="menu-bar">
             <ul id="links">
-                <li><a class="link-menu-bar" href="../../index.html">Quem Somos</a></li>
+                <li><a class="link-menu-bar" href="">Quem Somos</a></li>
                 <li id='localPage'><a  class="link-menu-bar" href="">Produtos</a><img id='iconLocalPage' src="../img/iconLocalPage.png" alt=""></li>
                 <li><a class="link-menu-bar" href="">Equipe</a></li>
                 <li><a class="link-menu-bar" href="">Contato</a></li>
