Preparação para unificação geral

--- a/assets/html/Produtos.html
+++ b/assets/html/Produtos.html
@@ -23,7 +23,7 @@
     </header>
     <main id="main">
         <section id="secBoats">
-            <div id="left" class="buttonNavigation" onclick="botaoEsquerdo()"><img  src="../img/left.svg" alt=""></div>
+            <div id="left" class="buttonNavigation" onclick="botaoEsquerdo()"><img  src="../img/left.svg"></div>
             <div id='lancha' class="boat">
                 
                 <div class="divImgBoat">
