--- a/assets/html/Produtos.html
+++ b/assets/html/Produtos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amontadas Boat</title>
     <link rel="stylesheet" href="../style/headerFooter.css">
-    <link rel="stylesheet" href="../style/produto.css">
+    <link rel="stylesheet" href="../style/Produto.css">
 </head>
 <body>
     <header id="header">
